--- a/server/.gitignore
+++ b/server/.gitignore
@@ -14,6 +14,8 @@ dist-ssr
 
 .env
 
+coverage
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -24,3 +26,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
