--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,19 +10,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@gorhom/bottom-sheet": "^4.2.2",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
+    "phosphor-react-native": "^1.1.1",
     "react": "17.0.1",
-    "react-dom": "17.0.2",
+    "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.7",
-    "webpack-dev-server": "~3.11.0",
-    "@expo/webpack-config": "~0.16.2"
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "0.17.1",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-gesture-handler": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
+    "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
   },
   "private": true
